<resources>
    <string name="app_name">Schedify</string>
    <string name="enter_task_here">Enter task here</string>
    <string name="submit">Submit</string>
    <string name="deleting_the_node">Deleting the node</string>
    <string name="textview">TextView</string>
    <string name="link">Link:</string>
    <string name="enter_link_to_the_meeting">Enter link to the meeting</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="message">Message:</string>
    <string name="enter_the_message">Enter the message</string>
    <string name="nothing_to_display">Click on + to schedule messages or meetings</string>
    <string name="go_to_the_other_activity">Go to the other activity</string>
    <string name="title">Title</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="done">Done</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="_00_00">00:00 AM</string>
    <string name="name">Name</string>
    <string name="welcome_to_geeksforgeeks">Welcome To GeeksforGeeks</string>
    <string name="idhar_rahega_messgae">idhaR rahega messgae</string>
</resources>